--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -11,3 +11,12 @@
 
   <%= @total/@aim.quantity*100  %>
   %です</p>
+
+<div class=comments>
+<%= form_for @comment, :url=>{ :action=> :commentcreate} do |f| %>
+<%= f.text_field :comment %>
+<%= f.submit 'コメント' %>
+<% end %>
+
+
+  </div>
