comment display 修正

--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -18,16 +18,11 @@
 <%= f.submit 'コメント' %>
 <% end %>
 
-<% @comments.each do |comment| %>
-  
 
-<ul>
-<% if comment.goal_id=params[:id] %>
+
+<ul class=comment_post>
   <%= render @comments %>
 </ul>
 
-<% end %>
-
-<% end %>
 
   </div>
