--- a/app/views/goals/commentcreate.erb
+++ b/app/views/goals/commentcreate.erb
@@ -1,3 +1,3 @@
-$("#comment_text").val("");
+$("#comment_comment").val("");
 
-$("ul").html("<%= j(render @comments) %>");
+$(".comment_post").html("<%= j(render @comments) %>");
