--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -6,7 +6,7 @@
 <li>
 <%= goal.goal_name %>
 
-<%= link_to '詳細', "", method: :get %>
+<%= link_to '詳細', top_path(id: goal.id), method: :get %>
 
   </li>
   </ul>
