--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,6 +1,6 @@
 ゴール設定
 
-<%= form_for @goal do |f| %>
+<%= form_for @goal, :url => {:action => :create} do |f| %>
   <%= f.label :goal_name %>
   <%=f.text_field :goal_name %>
   <%= f.label :quantity %>
