--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,6 +1,6 @@
 マイゴール詳細ページ
 
-<%= link_to '進捗データ入力', new_goal_track_path(@goal) %>
+<%= link_to '進捗データ入力',  new_user_goal_track_path(goal_id: params[:id]) %>
 
   <p>プログレスは
   <% @progs.each do |prog| %>
@@ -13,7 +13,7 @@
   %です</p>
 
 <div class=comments>
-<%= form_for @comment, :url=>{ :action=> :commentcreate}, remote: true do |f| %>
+<%= form_for @comment, :url=>{:action=> :commentcreate}, remote: true do |f| %>
 <%= f.text_field :comment %>
 <%= f.submit 'コメント' %>
 <% end %>
@@ -21,7 +21,9 @@
 
 
 <ul class=comment_post>
+ 
   <%= render @comments %>
+
 </ul>
 
 
