--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,16 +1,73 @@
+
 ゴール設定
 
-<%= form_for @goal, :url => {:action => :create} do |f| %>
-  <%= f.label :goal_name %>
-  <%=f.text_field :goal_name %>
-  <%= f.label :quantity %>
-  <%=f.text_field :quantity %>
-  <%= f.label :frequency %>
-  <%=f.text_field :frequency %>
+
+
+
+<button id="opener">時間で設定</button>
+<button id="opener2">チェックで設定</button>
+
+  <div id="dialog" title="ゴール設定/数字で設定">
+    <%= form_for @goal, :url => {:action => :create}, remote: true do |f| %>
+  <%=f.text_field :goal_name, :placeholder=>"ジョギング" %>を 
+   <%= f.text_field :deadline, :placeholder=>"4/30", class: "datepicker" %>
+  までに
+  <%=f.text_field :quantity, :placeholder=>"５"%> 
+  <%=f.text_field :qunit, :placeholder=>"キロ" %>
+  <p>達成する</p>
 
   <div class="col10 push1">
-              <%= button_tag type: "submit", class: "btn btn--block" do %>
+              <%= button_tag  type: "submit", class: "btn btn--block" do %>
               投稿する<i class="icon-arrow-right"></i>
               <% end %>
             </div>
   <% end %>
+
+  </div>
+
+
+<div id="dialog2" title="ゴール設定/チェックリスト">
+    <%= form_for @goal, :url => {:action => :create2}, remote: true do |f| %>
+  <%=f.text_field :goal_name, :placeholder=>"ジョギング" %>を
+  
+  <%= f.select :frequency_unit, [["毎日", "day"], ["毎週","week"],["毎月", "month"]] %>
+  <%=f.text_field :quantity, :placeholder=>"５"%> 
+  <%=f.text_field :qunit, :placeholder=>"キロ" %>
+  <p>達成する</p>
+
+  <div class="col10 push1">
+              <%= button_tag  type: "submit", class: "btn btn--block" do %>
+              投稿する<i class="icon-arrow-right"></i>
+              <% end %>
+            </div>
+  <% end %>
+
+  </div>
+
+
+<script>
+ $("#dialog" ).dialog({ autoOpen: false });
+  $("#opener").click(function(){
+  $("#dialog").dialog("open");
+  });
+  $("#dialog").submit(function(){
+  $(this).dialog("close");
+  });
+
+  $(function(){
+     var dateFormat = 'yy-mm-dd'
+    $(".datepicker").datepicker({
+      dateFormat: dateFormat
+    });
+  })
+
+  $("#dialog2" ).dialog({ autoOpen: false });
+  $("#opener2").click(function(){
+  $("#dialog2").dialog("open");
+  });
+  $("#dialog2").submit(function(){
+  $(this).dialog("close");
+  });
+
+</script>
+  
