--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,39 @@
-マイページ!!!
+<div class="mygoals">
+  <h2><%= @name %> さんの目標一覧</h2>
 
-<%= link_to '目標設定', new_user_goal_path(user_id: current_user.id) %>
+  </div>
+<div class=grouppending>
 
-<% @goals.each do |goal| %>
-<ul>
-<li>
-<%= goal.goal_name %>
-<%= link_to '詳細', "/users/#{current_user.id}/goals/#{goal.id}", method: :get %>
-  </li>
-  </ul>
+以下のグループからの招待が来ています
+<% @members.each do |member| %>
+<% if member.status!=true %>
+  <p>
+  グループ名
+<%= Group.find(member.group_id).group_name %><br>
+
+<%= link_to "承認する", "/groups/#{member.group_id}/users/#{current_user.id}", method: :get %>
+  </p>
 <% end %>
+<% end %>
+
+  </div>
+
+<div class="mygoalslist">
+個人の目標
+<% @goals.each do |goal| %>
+<p>
+  <%= link_to goal.goal_name, "/users/#{@user.id}/goals/#{goal.id}", method: :get %>
+  </p>
+<% end %>
+<br>
+グループの目標
+<% @current_member.each do |m| %>
+<p>
+  <%= link_to @groups.find(m.group_id).group_name, "/groups/#{m.group_id}", method: :get %>
+  </p>
+<% end %>
+
+  </div>
 
 
 
