--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,8 @@
-<li>
-  <%= comment.comment %>
 
-</li>
+<p class="commenteach">
+ <strong><%= link_to comment.user.name, "/users/#{comment.user_id}" %></strong>
+  <br><%= comment.comment %>
+
+  <br><%= Date.today %>
+  </p>
+
