--- a/app/views/goals/commentcreate.js.erb
+++ b/app/views/goals/commentcreate.js.erb
@@ -1,3 +1,2 @@
 $("#comment_comment").val("");
-
-$(".comment_post").html("<%= j(render @comments) %>");
+$(".comments").html("<%= j(render @comments) %>");
