--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,5 +1,6 @@
 
-ゴール設定
+  <div class=goalsetting>
+  <h2>ゴール設定</h2>
 
 
 
@@ -7,6 +8,11 @@
 <button id="opener">時間で設定</button>
 <button id="opener2">チェックで設定</button>
 
+<p>
+習慣づけが目的の方はチェック方式
+<br>具体的な目標値が決まっている方は数値方式が便利です
+  </p>
+  </div>
   <div id="dialog" title="ゴール設定/数字で設定">
     <%= form_for @goal, :url => {:action => :create}, remote: true do |f| %>
   <%=f.text_field :goal_name, :placeholder=>"ジョギング" %>を 
@@ -27,12 +33,13 @@
 
 
 <div id="dialog2" title="ゴール設定/チェックリスト">
-    <%= form_for @goal, :url => {:action => :create2}, remote: true do |f| %>
+    <%= form_for @goal, :url => {:action => :createcheck}, remote: true do |f| %>
   <%=f.text_field :goal_name, :placeholder=>"ジョギング" %>を
   
   <%= f.select :frequency_unit, [["毎日", "day"], ["毎週","week"],["毎月", "month"]] %>
   <%=f.text_field :quantity, :placeholder=>"５"%> 
   <%=f.text_field :qunit, :placeholder=>"キロ" %>
+  <%= f.text_field :deadline, :placeholder=>"4/30", id:"datepicker2" %>まで
   <p>達成する</p>
 
   <div class="col10 push1">
@@ -52,6 +59,7 @@
   });
   $("#dialog").submit(function(){
   $(this).dialog("close");
+  
   });
 
   $(function(){
@@ -69,5 +77,14 @@
   $(this).dialog("close");
   });
 
+  $(function(){
+     var dateFormat = 'yy-mm-dd'
+    $("#datepicker2").datepicker({
+      dateFormat: dateFormat
+    });
+  })
+
+
+
+
 </script>
-  
