--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,5 @@
 グループの目標ページ
+
 <h2 class="goaldeclaration">
 <%= @goal.goal_name %>を
 <%= @goal.quantity %><%@goal.qunit %>
@@ -16,3 +17,18 @@
 <%= @users.find(m.user_id).name %><br>
 
 <% end %>
+
+<%= form_for @track,:url => {:controller => 'tracks',:action=>'create', :goal_id=>@goal.id}, remote: true do |f| %>
+
+  <%= @goal.goal_name %> を
+  <%=f.number_field :quantity %>
+  <%= @goal.qunit%>完了
+<div class="col10 push1">
+              <%= button_tag type: "submit", class: "btn btn--block" do %>
+              入力<i class="icon-arrow-right"></i>
+              <% end %>
+            </div>
+  <% end %>
+  </div>
+
+<div id= "progress_post">
