--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -42,8 +42,13 @@
 
 
 <div class="progress">
+<% if @aim.quantity!=0 %>
   <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= @tracks.sum(:quantity)*100/@aim.quantity %>%">
     <span class="sr-only">40% Complete (success)</span>
+    <% else %>
+     <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= 0 %>%">
+    <span class="sr-only">40% Complete (success)</span>
+    <% end %>
   </div>
 </div>
 
