--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -10,8 +10,10 @@ html {
       -ms-text-size-adjust: 100%;
 }
 body {
+
   margin: 0;
-  padding-bottom:140px; /*フッターの高さと同じ*/
+  padding-bottom:140px; /
+  *フッターの高さと同じ*/
 }
 article,
 aside,
@@ -183,6 +185,7 @@ optgroup {
 table {
   border-spacing: 0;
   border-collapse: collapse;
+
 }
 td,
 th {
@@ -1098,7 +1101,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: white;
   text-decoration: none;
 }
 a:hover,
@@ -2263,9 +2266,11 @@ th {
   text-align: left;
 }
 .table {
-  width: 100%;
-  max-width: 100%;
-  margin-bottom: 20px;
+
+  width: 450px;
+  max-width: 50%;
+  border-radius: 10px;
+
 }
 .table > thead > tr > th,
 .table > tbody > tr > th,
@@ -3007,7 +3012,8 @@ select[multiple].input-lg {
   display: inline-block;
   padding: 6px 12px;
   margin-bottom: 0;
-  font-size: 14px;
+
+  font-size: 35px;
   font-weight: normal;
   line-height: 1.42857143;
   text-align: center;
@@ -3082,6 +3088,8 @@ fieldset[disabled] a.btn {
   color: #333;
   background-color: #e6e6e6;
   border-color: #adadad;
+
+
 }
 .btn-default:active:hover,
 .btn-default.active:hover,
@@ -3517,6 +3525,7 @@ tbody.collapse.in {
 .dropup,
 .dropdown {
   position: relative;
+
 }
 .dropdown-toggle:focus {
   outline: 0;
@@ -3531,7 +3540,7 @@ tbody.collapse.in {
   min-width: 160px;
   padding: 5px 0;
   margin: 2px 0 0;
-  font-size: 14px;
+  font-size: 30px;
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -4169,7 +4178,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar {
   position: relative;
-  min-height: 50px;
+  min-height: 100px;
   margin-bottom: 20px;
   border: 1px solid transparent;
 }
@@ -5133,9 +5142,10 @@ a.thumbnail.active {
   }
 }
 .progress {
-  height: 20px;
+  border-radius: 10px;
+  height: 40px;
   width: 50%;
-  margin-bottom: 20px;
+  margin: 0 auto; 
   overflow: hidden;
   background-color: #f5f5f5;
   border-radius: 4px;
@@ -6765,82 +6775,5 @@ button.close {
   }
 }
 
-.headingtitle{
-    margin: 10px 10px 10px 40px;
-}
-.mygoals{
-  text-align: center;
 
-
-}
-.mygoalslist{
-  text-align: center;
-}
-.mygoalname{
-  font-size: 20px;
-  color: black;
-}
-.goaldetail{
-  color: orange;
-}
-.goaldeclaration{
-  text-align: center;
-}
-
-.container_comment {
-
-  float: right;
-  overflow: scroll;
- width: 30%;
- height: 50%;
-  @include boxBase(20px 0 ,30px);
-  box-shadow: 0 0 10px rgba($black,0.2);
-  background-color: #E6FFE9;
-;
-  box-sizing: border-box;
-}
-.comments {
-
- 
-  padding: 5px;
-  margin-top: 15px;
-  a {
-    color: $accent;
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-}
-.commenteach{
-  padding: 5px;
-   border: 2px ridge #B6FF01;
-   border-radius: 5px;
-}
-.goalsetting{
-  text-align: center;
-}
-footer{
-  height: 140px;
-   position:absolute;
-     bottom:0;
-}
-header{
-
-
-  background-color: #FF8C00;
-}
-.date{
-  text-align: right;
-  font-size: 2px;
-
-}
-#user{
-  text-align: center;
-  font-size: 15px;
-}
-#container{
-  width: 50%;
-  float: left;
-}
 /*# sourceMappingURL=bootstrap.css.map */
