--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,7 +1,7 @@
 トップ!!
 目標一覧
 
-<div class="mygoalslist">
+<div class="mygoalslist2">
 <% @goals.each do |goal| %>
 <p>
 <%= link_to goal.goal_name, "#", method: :get %>
