--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,7 @@
-<h2>Sign up</h2>
 
+
+<div class="signup">
+<h2>Sign up</h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -26,9 +28,12 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+  </div>
+
 
 <%= render "devise/shared/links" %>
