--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -23,8 +23,8 @@
   <p>達成する</p>
 
   <div class="col10 push1">
-              <%= button_tag  type: "submit", class: "btn btn--block" do %>
-              投稿する<i class="icon-arrow-right"></i>
+              <%= button_tag  type: "submit", class: "btn btn--block",id:"heart3" do %>
+              <p id="setting"> 設定</p><i class="icon-arrow-right"></i>
               <% end %>
             </div>
   <% end %>
@@ -34,17 +34,16 @@
 
 <div id="dialog2" title="ゴール設定/チェックリスト">
     <%= form_for @goal, :url => {:action => :createcheck}, remote: true do |f| %>
-  <%=f.text_field :goal_name, :placeholder=>"ジョギング" %>を
+  <%=f.text_field :goal_name, :placeholder=>"ジョギング５キロ" %>を<br>
   
-  <%= f.select :frequency_unit, [["毎日", "day"], ["毎週","week"],["毎月", "month"]] %>
-  <%=f.text_field :quantity, :placeholder=>"５"%> 
-  <%=f.text_field :qunit, :placeholder=>"キロ" %>
+  <%= f.select :frequency_unit, [["毎日", "日"], ["毎週","週"],["毎月", "月"]]%>
+  <%=f.text_field :quantity, :placeholder=>"５"%>回<br>
   <%= f.text_field :deadline, :placeholder=>"4/30", id:"datepicker2" %>まで
-  <p>達成する</p>
+  継続する
 
   <div class="col10 push1">
-              <%= button_tag  type: "submit", class: "btn btn--block" do %>
-              投稿する<i class="icon-arrow-right"></i>
+              <%= button_tag  type: "submit", class: "btn btn--block" ,id: "heart3" do %>
+              <p id="setting"> 設定</p><i class="icon-arrow-right"></i>
               <% end %>
             </div>
   <% end %>
@@ -52,8 +51,11 @@
   </div>
 
 
+
 <script>
- $("#dialog" ).dialog({ autoOpen: false });
+$("#dialog").css('background-color','#ffffb7');
+ $("#dialog" ).dialog({ autoOpen: false,
+  minWidth: 800, minHeight: 700});
   $("#opener").click(function(){
   $("#dialog").dialog("open");
   });
@@ -68,8 +70,10 @@
       dateFormat: dateFormat
     });
   })
-
-  $("#dialog2" ).dialog({ autoOpen: false });
+$("#dialog2").css('background-color','#ffffb7');
+  $("#dialog2" ).dialog({ 
+  autoOpen: false,
+  minWidth: 800, minHeight: 700,});
   $("#opener2").click(function(){
   $("#dialog2").dialog("open");
   });
