--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,14 +1,19 @@
+<%= link_to products_path, method: :get, id: "progress" do %>
+        <i class="icon-trash icon-white"></i> 目標にお金をかける！
+      <% end %>
+
+
+<% if @goal.goaltype.to_i ==1 %>
 
 <h2 class="goaldeclaration">
-<%= @goal.goal_name%>を
-
-<%=@goal.quantity%>
+<%= @goal.goal_name %>を<%= @goal.quantity %>
 <%= @goal.qunit %>達成する
 <br>
-<%= @goal.deadline.month %>月<%= @goal.deadline.day %>日まで残り
-  <%= @rest %> 日
-  </h2>
+<%= @goal.deadline.month %>月<%= @goal.deadline.day %>日までに！
 
+
+  </h2>
+<div class="progresscontinuous">
 <button id="progress">進捗データ入力</button>
 <div class="inputtrack", title="進捗データ入力">
 
@@ -18,49 +23,139 @@
 
   <%= @goal.goal_name %> を
   <%=f.number_field :quantity %>
-  <%= @goal.qunit%>完了
+  <%= @goal.qunit%>
 
 
   <div class="col10 push1">
-              <%= button_tag type: "submit", class: "btn btn--block" do %>
-              入力<i class="icon-arrow-right"></i>
+              <%= button_tag type: "submit", class: "btn btn--block", id: "heart2" do %>
+              <P class="complete_botton">完了！</P><i class="icon-arrow-right"></i>
+              <% end %>
+              
+            </div>
+            <% end %>
+            
+  </div>
+
+  </div>
+
+  <div id= "progress_post">
+  <p>
+今日までの達成値<%= @tracks.sum(:quantity)*100/@aim.quantity %> %
+  </p>
+
+
+
+<% if @aim.quantity!=0 %>
+  <div class="progress">
+  <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= @tracks.sum(:quantity)*100/@aim.quantity %>%"><p class="percent">
+    <%= @tracks.sum(:quantity)*100/@aim.quantity %>%
+  </p>
+  </div>
+  </div>
+    <% else %>
+    <div class="progress">
+     <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= 0 %>%">
+     0%
+  </div>
+</div>
+<% end %>
+
+</div>
+<% else %>
+
+<h2 class="goaldeclaration">
+<%= @goal.goal_name%>を
+毎 <%= @goal.frequency_unit %>
+
+<%=@goal.quantity%>
+回達成する
+  </h2>
+  <div id= "progress_post2">
+<p class="user_title">
+<%= @tracksmax+1 %><%=  @goal.frequency_unit %>目:
+<%=@goal.goal_name %>を <%= @tracks.where(period: @tracksmax).count-1 %> 回達成!!
+  </p>
+  <p class="rest"><%= @goal.deadline.month %>月<%= @goal.deadline.day %>日まで残り
+  <%= @rest %> 日</p>
+</div>
+<div class="progresscheck">
+<button id="progress">進捗データ入力</button>
+<div class="inputtrack", title="進捗データ入力">
+
+
+
+<%= form_for @track,:url => {:controller => 'tracks',:action=>'create', :goal_id=>params[:id]}, remote: true do |f| %>
+
+  <%= @goal.goal_name %> を
+  <%= @goal.quantity%>
+  <%= @goal.qunit%>
+ 
+  <%= f.hidden_field :check, :value => true %>
+
+
+
+  <div class="col10 push1">
+              <%= button_tag type: "submit", class: "btn btn--block", id: "heart" do %>
+              <p class="complete_botton">完了</p><i class="icon-check icon-4x"></i>
               <% end %>
             </div>
   <% end %>
   </div>
-
-<div id= "progress_post">
-<% if @aim.quantity!=0 %>
-昨日までの達成度<%= @tracks.sum(:quantity)*100/@aim.quantity%> %達成
-<% else %>
-昨日までの達成度 0%達成
-<% end %>
-
-</div>
-目標値 <%= @aim.quantity %>
-
-
-
-<div class="progress">
-<% if @aim.quantity!=0 %>
-  <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= @tracks.sum(:quantity)*100/@aim.quantity %>%">
-    <span class="sr-only">40% Complete (success)</span>
-    <% else %>
-     <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= 0 %>%">
-    <span class="sr-only">40% Complete (success)</span>
-    <% end %>
   </div>
-</div>
-
-<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
 
+ 
 
-<% if user_signed_in? %>
+
+<% if @goal.goaltype.to_i ==2 %>
+<div class=checkpast>
+  <p class="user_title">いままでの達成状況</p>
+<div class="progresstable">
+<table class="table table-striped table-bordered table-hover ">
+  <tbody>
+    <tr>
+    <td> <p class="blacktable">期間</p></td>
+    <td><p class="blacktable"> 結果</p></td>
+    </tr>
+
+<tr class="success">
+
+
+<% i=0 %>
+<% while i <=@tracksmax  %>
+<% if @tracks.where(period: i).length==0 %>
+      <tr id="fail">
+        <td><p class="blacktable"> <%= i+1 %> <%= @goal.frequency_unit %> 目</p></td>
+      <td> ❌</td>
+    </tr>
+  <% elsif @tracks.where(period: i).first.success!=true %>
+      <tr id="fail">
+        <td> <p class="blacktable"><%= i+1 %> <%= @goal.frequency_unit %> 目</p></td>
+      <td> ❌</td>
+    </tr>
+      <% else %>
+      <tr id="success">
+        <td><p class="blacktable"> <%= i+1 %> <%= @goal.frequency_unit %> 目</p></td>
+      <td> ⭕️</td>
+    </tr>
+      <% end %>
+      <% i=i+1 %>
+  <% end %>
+
+
+
+</tr>
+</tbody>
+</table>
+<% end %>
+  </div>
+  </div>
+
+  <% if user_signed_in? %>
 <div class="container_comment">
 <%= form_for @comment, :url=>{:action=> :commentcreate}, remote: true do |f| %>
 <%= f.text_field :comment %>
-<%= f.submit 'コメント' %>
+<%= f.submit 'コメント', class: "commentbottom" %>
 <% end %>
 
 
@@ -72,19 +167,40 @@
   <% else %>
   <div class="container_comment">
   <div class="comments">
-    <p>コメント一覧</p>
+    <p class="blacktable">コメント一覧</p>
 
   <% @comments.each do |comment| %>
-  
-  <p>
-  <strong><%= link_to comment.user.name, "/users/#{comment.user_id}" %></strong>
-  <%= comment.comment %>
-  </p>
-  
+<div class="commenteach">
+
+  <p id="user_name"><%= link_to comment.user.name, "/users/#{comment.user_id}" %></p>
+  <p class="blackcomment"><%= comment.comment %></p>
+<p class="date"><%= Date.today %></p>
+  </div>
   <% end %>
   </div>
 
   <% end %>
   </div>
   
- 
+
+
+ <% end %>
+
+
+
+
+<script>
+$(".inputtrack" ).css('background-color','#ffffb7');
+$(".inputtrack" ).dialog({
+autoOpen: false,
+width: 800, height:700, });
+  $("#progress").click(function(){
+  $(".inputtrack").dialog("open");
+  });
+
+  $(".inputtrack").submit(function(){
+  $(this).dialog("close");
+  });
+
+</script>
+
