--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,34 +1,61 @@
-グループの目標ページ
 
-<h2 class="goaldeclaration">
-<%= @goal.goal_name %>を
-<%= @goal.quantity %><%@goal.qunit %>
-達成する
+
+<%= link_to "新しいグループ目標を設定", "/groups/#{params[:id]}/goals/new" %>
+
+
+<div class="goaldeclaration">
+<% @goals.each do |goal| %>
+<% if (goal.deadline - Date.today).to_i>=0 %>
+<%= link_to goal.goal_name, "/groups/#{params[:id]}/goals/#{goal.id}" %>
+:
+<%= goal.deadline.month %>月<%= goal.deadline.day %>日まで
+残り<%=(goal.deadline - Date.today).to_i%> 日
+
 <br>
-<%= @goal.deadline.month %>月<%= @goal.deadline.day %>日まで
-残り<%=@rest%> 日
+<% end %>
 
-  </h2>
+  </div>
+
+  <div class="completed">
+  終了した目標一覧
+<% @goals.each do |goal| %>
+<% if (goal.deadline - Date.today).to_i<=0 %>
+<%= link_to goal.goal_name, "/groups/#{params[:id]}/goals/#{goal.id}" %>
 
 
-<br>メンバー
 <br>
-<% @members.each do |m| %>
+<% end %>
+<% end %>
+
+  </div>
+
+<% end %>
+
+
+
+<div class="memberlist" div>
+メンバー
+<br><% @members.each do |m| %>
+<%= @users.find(m.user_id).name %><br>
+
+<% end %>
+  </div>
+<div class="non_memberlist" div>
+承認待ちのメンバー一覧
+<br><% @nonmembers.each do |m| %>
 <%= @users.find(m.user_id).name %><br>
 
 <% end %>
 
-<%= form_for @track,:url => {:controller => 'tracks',:action=>'create', :goal_id=>@goal.id}, remote: true do |f| %>
-
-  <%= @goal.goal_name %> を
-  <%=f.number_field :quantity %>
-  <%= @goal.qunit%>完了
-<div class="col10 push1">
-              <%= button_tag type: "submit", class: "btn btn--block" do %>
-              入力<i class="icon-arrow-right"></i>
-              <% end %>
-            </div>
-  <% end %>
   </div>
 
-<div id= "progress_post">
+<script>
+
+$(".inputtrack" ).dialog({autoOpen: false });
+  $("#progress").click(function(){
+  $(".inputtrack").dialog("open");
+  });
+
+  $(".inputtrack").submit(function(){
+  $(this).dialog("close");
+  });</script>
