--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -290,7 +290,8 @@ strong{
 #new_track{
   font-family: "uzura";
 }
-#yellowb{
+#yellowb
+{
 margin: 0 auto; 
 float: right;
 background-color: #ffff7f;
