--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to products_path, method: :get, id: "progress" do %>
+<%= link_to products_path, method: :get, id: "yellowb" do %>
         <i class="icon-trash icon-white"></i> 目標にお金をかける！
       <% end %>
 
