--- a/app/views/tops/show.html.erb
+++ b/app/views/tops/show.html.erb
@@ -17,19 +17,27 @@
 <div id= "progress_post">
 <% if @tracks.sum(:quantity)!=0 %>
 今日までの達成度<%= @tracks.sum(:quantity)*100/@aim.quantity%> %達成
-<% else %>
-今日までの達成度0%達成
-<% end %>
-</div>
-目標値 <%= @aim.quantity %>
-
-
 
 <div class="progress">
   <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= @tracks.sum(:quantity)*100/@aim.quantity %>%">
     <span class="sr-only">40% Complete (success)</span>
   </div>
 </div>
+<% else %>
+今日までの達成度0%達成
+
+<div class="progress">
+  <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:0 %>%">
+    <span class="sr-only">40% Complete (success)</span>
+  </div>
+</div>
+<% end %>
+</div>
+目標値 <%= @aim.quantity %>
+
+
+
+
 
 
 
