--- a/app/views/groups/_member_form.html.erb
+++ b/app/views/groups/_member_form.html.erb
@@ -1,5 +1,5 @@
 
 
-<li class="fields">
+<div class="fields">
   <%= f.collection_select :user_id, @users, :id, :name,:include_blank => true %><br>
-</li>
+</div>
