--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,15 +1,16 @@
 <%= nested_form_for @group do |f| %>
 <%= f.label :group_name %>
  <%= f.text_field :group_name %>
-
+ <br>
+<%= f.label :user_id, 'メンバー' %>
 <%= f.fields_for :members, @group.members do |f| %>
 
 <%= render "member_form", f:f %>
   <% end %>
   <p>
-    <%= f.link_to_add "メンバーを追加", :members %>
+    <%= f.link_to_add "メンバーをさらに追加", :members %>
   </p>
 
-    <%= f.submit %>
+    <%= f.submit '作成'%>
 
 <% end %>
