--- a/app/views/groups/goalshow.html.erb
+++ b/app/views/groups/goalshow.html.erb
@@ -1,7 +1,8 @@
 
-<%= link_to products_path, method: :get, id: "yellowb" do %>
+<%= link_to products_path, method: :get, id: "yellowb1" do %>
         <i class="icon-trash icon-white"></i> 目標にお金をかける！
       <% end %>
+<button id="progress">進捗データ入力</button>
 
 <%= link_to  group_path(id: @group_id), method: :get, id: "yellowb" do %>
         <i class="icon-trash icon-white"></i> グループページへ！
@@ -9,7 +10,8 @@
 
 <% if @goal.goaltype.to_i ==1 %>
 
- <h2 class="goaldeclaration">
+ <p class="text">
+<br>
 <%= @goal.goal_name%>を
 みんなで
 <%=@goal.quantity%>
@@ -19,7 +21,7 @@
   <%= @rest %> 日
   </h2>
   <div class="progresscontinuous">
-<button id="progress">進捗データ入力</button>
+
 <div class="inputtrack", title="進捗データ入力">
 
 
@@ -39,40 +41,44 @@
   <% end %>
   </div>
 
+
  
-
+  
 <div id= "progress_post">
-<%= current_user.name %> のプログレス<br><%= @tracks.sum(:quantity)%>
-<br>
-メンバーの進捗状況<br>
+<P class="texts">これまでの達成</P>
+<table class="table table-striped table-bordered table-hover ">
+
+
+<tr>
 <% @members.each do |member| %>
-<% if member.user_id != current_user.id %>
-<%= User.find_by(id: member.user_id).name %>
-<%= @tracksmember.where(user_id: member.user_id).sum(:quantity) %> 達成
+  <th><%= User.find_by(id: member.user_id).name %></th>
+  <% end %>
+  </tr>
+  <tr>
+  <% @members.each do |member| %>
+    <td><%= @tracksmember.where(user_id: member.user_id).sum(:quantity) %><%=@goal.qunit%> </td>
+ <% end %>
+  </tr>
 
 
-<br>
-<% end %>
+  </table>
+  <p class="text">全員で<%= @tracksmember.sum(:quantity)*100/@aim.quantity %>%達成</p>
 
-
-<% end %>
-全員で<%= @tracksmember.sum(:quantity)*100/@aim.quantity %>%達成
+<% @memberlist.each do |m|%>
 <div class="progress">
-<% if @aim.quantity!=0 %>
-  <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= @tracksmember.sum(:quantity)*100/@aim.quantity %>%">
-    <span class="sr-only">40% Complete (success)</span>
-    <% else %>
-     <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= 0 %>%">
-    <span class="sr-only">40% Complete (success)</span>
-    <% end %>
+  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:<%=@tracksmember.where(user_id: m).sum(:quantity)*100/@aim.quantity %>%">
+  <p id="progresstitle"><%=User.find(m).name %>:<%=@tracksmember.where(user_id: m).sum(:quantity)*100/@aim.quantity %>%</p>
   </div>
 </div>
+<% end %>
 
-</div>
+
+
 
 <% else %>
 
-<h2 class="goaldeclaration">
+ <p class="text">
+<br>
 <%= @goal.goal_name%>を
 毎 <%= @goal.frequency_unit %>
 
@@ -81,9 +87,9 @@
 <br>
 <%= @goal.deadline.month %>月<%= @goal.deadline.day %>日まで残り
   <%= @rest %> 日
-  </h2>
+  </p>
 <div class="progresscheck">
-<button id="progress">進捗データ入力</button>
+
 <div class="inputtrack", title="進捗データ入力">
 
 
@@ -110,15 +116,15 @@
 
 
 <div id= "progress_post2">
-
-<%= @since %><%=  @goal.frequency_unit %>目 <%= @tracks.where(period: @tracksmax).count-1 %> 回達成!! 
+<p class="text">
+  <%= @since %><%=  @goal.frequency_unit %>目 <%= @tracks.where(period: @tracksmax).count-1 %> 回達成!! </p>
 </div>
  <% end %>
  
 
 
 <% if @goal.goaltype.to_i ==2 %>
-いままでの達成状況
+  <p class="text">いままでの達成状況</p>
 <div class=pastprogress>
 <table class="table table-striped table-bordered table-hover ">
 
@@ -138,11 +144,11 @@
 <% j=0 %>
 <% while j<@memberlist.length do %>
 <% if @tracksbyperiod.find_by(user_id: @memberlist[j], period: k) ==nil %>
-<th>fail</th>
+<td>❌</td>
 <% elsif  @tracksbyperiod.find_by(user_id: @memberlist[j], period: k).success == false%>
-<th>fail</th>
+<td>❌</td>
 <% else %>
-<th> pass️</th>
+<td id="success"> ⭕️</td>
 <% end %>
 <%j=j+1 %>
 <% end %>
