--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -3,59 +3,51 @@
 <%= link_to "新しいグループ目標を設定", "/groups/#{params[:id]}/goals/new", id:'yellowc'%>
 
   <p class="grouptitle"><%= @group.group_name%>の目標一覧</p>
+
 <div class="goaldeclaration">
 
 <% @goals.each do |goal| %>
-<% if (goal.deadline - Date.today).to_i>=0 %>
 
-<div class="goaleach">
+<% if (goal.deadline - Date.today).to_i>=0 %>
 <p class="goaltitle"><%= link_to goal.goal_name, "/groups/#{params[:id]}/goals/#{goal.id}" %>
 :
 <%= goal.deadline.month %>月<%= goal.deadline.day %>日まで
   残り<%=(goal.deadline - Date.today).to_i%> 日</p>
-  </div>
-<% end %>
-
-
-  </div>
-
-  <div class="completed">
-<p class="mtitle"> 終了した目標一覧
-<% @goals.each do |goal| %>
-<% if (goal.deadline - Date.today).to_i<=0 %>
-  <%= link_to goal.goal_name, "/groups/#{params[:id]}/goals/#{goal.id}" %></p>
-
-
-<br>
 <% end %>
 <% end %>
 
   </div>
 
-<% end %>
+
 
 
 <div class="members">
-<div class="memberlist">
   <p class='mtitle'>メンバー</p>
 <% @members.each do |m| %>
   <p class='text'><%= @users.find(m.user_id).name %></p>
 
 <% end %>
   </div>
-<div class="non_memberlist" div>
-<p class='mtitle'>承認待ちのメンバー一覧<br>
+
+<div class="members">
+  <p class='mtitle'>承認待ちのメンバー一覧</p>
 <% @nonmembers.each do |m| %>
  <p class='text'> <%= @users.find(m.user_id).name %></p>
 
 <% end %>
+  </div>
 
-  </div>
-  </div>
+
+
+
 
 <script>
 
-$(".inputtrack" ).dialog({autoOpen: false });
+$(".inputtrack" ).dialog({
+  autoOpen: false,
+  height:500,
+  width: 600,
+   });
   $("#progress").click(function(){
   $(".inputtrack").dialog("open");
   });
