--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -35,6 +35,7 @@
  
   border: 5px solid #FFFFFF; 
   border-radius: 10px;
+  margin-left:0;
  }
  
  .ui-dialog-titlebar{
@@ -209,7 +210,7 @@ color: black;
 
 .headingtitle{
     margin: 10px 10px 10px 40px;
-    font-size: 60px;
+    font-size: 80px;
     text-align: center;
 }
 .mygoals{
@@ -395,4 +396,7 @@ td{
 }
 p .add_nested_fields{
   text-decoration: underline;
+}
+p.usertitle{
+  text-align: center;
 }
