--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -124,7 +124,7 @@ em {
   border: 5px dotted #FFFFFF;  
   border-radius: 15px;
   text-align: center;
-  height: 150px;
+
 
 }
 a #goalname{
@@ -132,10 +132,18 @@ a #goalname{
   color: #f9fff9;
   margin: 0;
   color:#FFFFFF;
+
+}
+#goalname{
+  text-align: center;
+  font-size: 50px;
 }
 #username{
   font-size:30px;
   margin: 0;
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 30px;
 }
 .grouppending{
   width:600px;
@@ -233,23 +241,25 @@ input {
 
 
 #heart {
-margin-right: auto;
-margin-left: auto;
+
+margin-left: 80px;
   background-color: #ff99cc;
     width: 400px;
     height:300px;
     border-radius: 40px;
     margin-top: 100px;
+    font-family: uzura;
 }
 
 #heart2 {
-margin-right: auto;
-margin-left: auto;
+
+margin-left: 80px;
   background-color: #ff99cc;
     width: 400px;
     height:300px;
     border-radius: 40px;
     margin-top: 50px;
+    font-family: uzura;
 }
 #heart3{
 
@@ -289,6 +299,8 @@ strong{
 }
 #new_track{
   font-family: "uzura";
+  font-size:50px;
+  text-align: center;
 }
 #yellowb
 {
@@ -372,6 +384,8 @@ font-size: 20px;
   height: 300px;
   overflow: scroll;
   border-radius: 10px;
+  float: left;
+  margin-left: 50px;
 
 }
 .mtitle{
@@ -384,9 +398,10 @@ text-align: center;
 }
 .goaldeclaration{
 
-  height: 500px;
+  height: 400px;
   border-bottom:5px solid #FFFFFF;
-  border-radius:5px 
+  border-radius:5px;
+  overflow: scroll;
 }
 .new_user .field label{
   font-size: 50px;
@@ -401,17 +416,26 @@ text-align: center;
 height: 50px;
 width: 400px;
 font-size:30px;
+color:#5cb85c;
+}
+.user_email input{
+  color:#FFFFFF;
+}
+input {
+  color:#FFFFFF;
 }
 .field #user_password{
 height: 50px;
 width: 400px;
 font-size:30px;
+color:#5cb85c;
 
 }
 .field #user_password_confirmation{
   height: 50px;
 width: 400px;
 font-size:30px;
+color:#5cb85c;
 }
 
 .actions input{
@@ -438,4 +462,18 @@ font-size:30px;
 .introduction{
   height: 500px;
   border-bottom:5px solid #FFFFFF;
+}
+
+.password{
+  color: #FFFFFF;
+}
+input #user_password.password{
+color:#5cb85c;
+}
+.footer{
+  margin-bottom: 0;
+}
+#member_status{
+  width: 100px;
+  height: 100px;
 }
