--- a/app/views/groups/goalshow.html.erb
+++ b/app/views/groups/goalshow.html.erb
@@ -34,7 +34,7 @@
 
 
   <div class="col10 push1">
-              <%= button_tag type: "submit", class: "btn btn--block" do %>
+              <%= button_tag type: "submit", id: "heart2" do %>
               入力<i class="icon-arrow-right"></i>
               <% end %>
             </div>
@@ -98,15 +98,15 @@
 
   <%= @goal.goal_name %> を
   <%= @goal.quantity%>
-  <%= @goal.qunit%>完了
+  <%= @goal.qunit%>
  
-  <%= f.check_box :check %>
+  <%= f.hidden_field :check, :value => true %>
 
 
 
   <div class="col10 push1">
-              <%= button_tag type: "submit", class: "btn btn--block" do %>
-              入力<i class="icon-arrow-right"></i>
+              <%= button_tag type: "submit", id: "heart" do %>
+              完了！<i class="icon-arrow-right"></i>
               <% end %>
             </div>
   <% end %>
@@ -139,7 +139,7 @@
 <% k=0 %>
 <% while k<@since do %>
 <tr>
-  <th><%=k %></th>
+  <th><%=k+1 %><%=@goal.frequency_unit%>目</th>
 
 <% j=0 %>
 <% while j<@memberlist.length do %>
@@ -198,7 +198,10 @@
 
 
   <script>
-$(".inputtrack" ).dialog({autoOpen: false });
+  $(".inputtrack" ).css('background-color','#ffffb7');
+$(".inputtrack" ).dialog({
+  autoOpen: false,
+width: 800, height:700, });
   $("#progress").click(function(){
   $(".inputtrack").dialog("open");
   });
