--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -36,6 +36,7 @@
   border: 5px solid #FFFFFF; 
   border-radius: 10px;
   margin-left:0;
+  color:#000000;
  }
  
  .ui-dialog-titlebar{
@@ -43,6 +44,7 @@
  }
 
 #goal_goal_name{
+  color: #000000;
   border-radius: 10px;
   margin:0 auto;
    font-family: uzura;
@@ -54,6 +56,7 @@
    font-family: uzura;
     width: 500px;
      margin:0 auto;
+     color:#000000;
 }
 #goal_quantity{
   border-radius: 10px;
@@ -61,6 +64,7 @@
    font-family: uzura;
     width: 200px;
      margin:0 auto;
+     color: #000000;
 }
 #goal_qunit{
   border-radius: 10px;
@@ -68,6 +72,7 @@
    font-family: uzura;
     width: 500px;
      margin:0 auto;
+     color: #000000;
 }
 .new_goal{
   font-family: uzura;
@@ -91,7 +96,7 @@ select{
 #datepicker2{
   margin-left: 0;
   font-family: uzura;
-  font-color: black;
+color: #000000;
   margin-top: 10px;
    width: 200px;
    margin-right: auto;
