--- a/app/views/groups/goalshow.html.erb
+++ b/app/views/groups/goalshow.html.erb
@@ -117,7 +117,7 @@
 
 <div id= "progress_post2">
 <p class="text">
-  <%= @since %><%=  @goal.frequency_unit %>目 <%= @tracks.where(period: @tracksmax).count-1 %> 回達成!! </p>
+  <%= @since +1 %><%=  @goal.frequency_unit %>目 <%= @tracks.where(period: @tracksmax).count-1 %> 回達成!! </p>
 </div>
  <% end %>
  
@@ -139,7 +139,7 @@
 <% k=0 %>
 <% while k<@since do %>
 <tr>
-  <th><%=k+1 %><%=@goal.frequency_unit%>目</th>
+  <th><%= k %><%=@goal.frequency_unit%>目</th>
 
 <% j=0 %>
 <% while j<@memberlist.length do %>
@@ -198,7 +198,9 @@
 
 
   <script>
-  $(".inputtrack" ).css('background-color','#ffffb7');
+
+ $(".inputtrack" ).css('background-color','#ffffb7');
+
 $(".inputtrack" ).dialog({
   autoOpen: false,
 width: 800, height:700, });
